--- a/style.css
+++ b/style.css
@@ -35,7 +35,6 @@ nav
     justify-content: space-between;
     align-items: center;
     height: 10vh;
-    position: sticky;
     top:0;
     
 }
@@ -256,6 +255,14 @@ a
     padding-left: 0;
     display: flex;
     flex-wrap: wrap;
+}
+.filter-menu li
+{
+    transition: 0.5s;
+}
+.filter-menu li:hover
+{
+    color:#5645ff;
 }
 #the-work
 {
@@ -689,4 +696,12 @@ nav a {
 }
 nav a:hover {
     filter:brightness(100%);
+}
+#links a
+{
+    transition: 0.5s;
+}
+#links a:hover
+{
+    text-decoration: underline;
 }
